Closed
Bug 1437332
Opened 8 years ago
Closed 8 years ago
Narrator audio continues with LastPass installed when Reader Mode is exited
Categories
(Toolkit :: Reader Mode, defect)
Tracking
()
VERIFIED
FIXED
mozilla60
People
(Reporter: justinnoah, Assigned: eeejay)
Details
Attachments
(2 files)
|
2.87 KB,
patch
|
Gijs
:
review+
|
Details | Diff | Splinter Review |
|
1.44 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
Build ID: 20180209102946
Steps to reproduce:
- Install LastPass and make sure the addon is enabled
-- logged in or not does not matter
- Enter reader mode for any page
-- Discovered bug while at http://philosophyofbrains.com/2015/08/04/lucid-dreaming-or-dreaming-that-youre-dreaming.aspx
- Start Narrator and skip to a long paragraph
- Exit Reader Mode
Actual results:
Audio kept playing until end of paragraph or reader mode was re-opened.
Expected results:
Audio should stop once Reader Mode is exited to be consistent with Firefox without LastPass installed and enabled.
Comment 1•8 years ago
|
||
Eitan, any idea how a webextension would be able to interfere with this given bug 1371786 is unfixed ie webextensions shouldn't be able to run script here?
Flags: needinfo?(eitan)
| Assignee | ||
Comment 2•8 years ago
|
||
Looks like an addon could keep a window alive for just a little bit longer. This messes with how narrate is currently shut down.
Attachment #8954231 -
Flags: review?(gijskruitbosch+bugs)
| Assignee | ||
Comment 3•8 years ago
|
||
Since SpeechSynthesis can outlive the windows inner window(?) we need to make sure the speak() won't work on it once it is destroyed.
Attachment #8954232 -
Flags: review?(bugs)
| Assignee | ||
Updated•8 years ago
|
Flags: needinfo?(eitan)
Updated•8 years ago
|
Attachment #8954231 -
Flags: review?(gijskruitbosch+bugs) → review+
Comment 4•8 years ago
|
||
Comment on attachment 8954232 [details] [diff] [review]
Don't speak after inner window was destroyed. r?smaug
I guess this is fine.
(I wonder if exception should be thrown or error event dispatched or something.)
Attachment #8954232 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 5•8 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #4)
> Comment on attachment 8954232 [details] [diff] [review]
> Don't speak after inner window was destroyed. r?smaug
>
> I guess this is fine.
> (I wonder if exception should be thrown or error event dispatched or
> something.)
Maybe an exception? It would mean changing speak() to 'Throws' in the webidl. It would then not match the spec. Since this happens in a relatively obscure race I don't know if it's worth it.
In error event would be bad because the event's owner would be the recently destroyed window.
I can follow up on this if needed.
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c394578ac667
Stop narration on unload. r=Gijs
https://hg.mozilla.org/integration/mozilla-inbound/rev/8a60cb3337c1
Don't speak after inner window was destroyed. r=smaug
Keywords: checkin-needed
Comment 7•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/c394578ac667
https://hg.mozilla.org/mozilla-central/rev/8a60cb3337c1
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
status-firefox60:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Updated•8 years ago
|
Flags: qe-verify+
Comment 8•8 years ago
|
||
I observed this issue's behavior on Ubuntu 16.04 x32, with Firefox 60.0a1 (2018-02-10) with the LastPass Password Manager or RoboForm Password Manager add-ons installed.
This is no longer reproducible on Firefox 61.0a1 (2018-03-22) and Firefox 60.0b5 (20180319175655) under Ubuntu 16.04 (both on x32 and x64), Windows 10 x64 and macOS 10.13.
Updated•7 years ago
|
Assignee: nobody → eitan
You need to log in
before you can comment on or make changes to this bug.
Description
•