Bug 1437332 - Don't speak after inner window was destroyed. r=smaug